bad/add_invalid_types_bool_bool.example_compiler_output
ERROR
[1mbad/add_invalid_types_bool_bool.lat:3:7: [1;31merror: [0;1maddition is defined only for int values or string values, not `boolean` and `boolean`[m
	true + false;
	     [1;32m^[m
